[gd_scene load_steps=4 format=3 uid="uid://cfhnkqgcthwfo"]

[ext_resource type="Texture2D" uid="uid://q2vkpwd6pukm" path="res://sprites/icon.svg" id="1_7txb2"]
[ext_resource type="Script" path="res://scenes/test_dice.gd" id="1_m8i2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjn0c"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="test_dice" type="Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m8i2j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(16, 16)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_7txb2")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 31.0
offset_bottom = 31.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yjn0c")

[node name="value_label" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
